--- a/v25.html
+++ b/v25.html
@@ -5,8 +5,8 @@
     <title>V8 ELITE | PROTOCOLO</title>
     <style>
         :root { --gold: linear-gradient(to right, #bf953f, #fcf6ba, #b38728, #fbf5b7, #aa771c); }
-        body { background: #000; color: #fff; font-family: sans-serif; text-align: center; }
-        #v8-conteudo { display: none; } /* Começa escondido por segurança */
+        body { background: #000; color: #fff; font-family: sans-serif; text-align: center; margin: 0; padding: 0; }
+        #v8-conteudo { display: none; } 
         .bloqueio-tela { display: none; padding: 100px 20px; }
         .bloqueio-tela h1 { color: #ff4d4d; text-transform: uppercase; }
     </style>
@@ -19,10 +19,11 @@
     </div>
 
     <div id="v8-conteudo">
-        <h2 style="background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">V8 ELITE ATIVADO</h2>
-        <p>Bem-vinda ao seu Motor de Comando.</p>
+        <h1 style="margin-top:50px;"><span style="background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">V8 ELITE PROTOCOL</span></h1>
         
-        <footer style="margin-top: 100px; font-size: 10px; opacity: 0.6;">
+        <p>Acesso Autorizado. O motor está pronto.</p>
+
+        <footer style="position: fixed; bottom: 20px; width: 100%; font-size: 10px; opacity: 0.6; text-align: center;">
             A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. ESTE PROGRAMA APENAS GERA O PROMPT.
         </footer>
     </div>
@@ -30,17 +31,19 @@
     <script>
         function validarAcesso() {
             const urlParams = new URLSearchParams(window.location.search);
-            const token = urlParams.get('token');
+            // Captura o 'id' que está no link da Helen
+            const idUser = urlParams.get('id');
 
-            // --- REGRA DE OURO: ACESSO DA HELEN É IMUTÁVEL ---
-            if (token === "PERMANENTE_HELEN") {
+            // --- REGRA DE OURO: BLINDAGEM DA HELEN CRISTINA ---
+            // Este trecho aceita exatamente o link: ?id=Helen_cristina
+            if (idUser === "Helen_cristina") {
                 liberar();
                 return;
             }
 
-            // Verifica os outros acessos que você gerou no painel
+            // Verifica os outros acessos revogáveis
             const ativos = JSON.parse(localStorage.getItem('v8_acessos_ativos')) || [];
-            const autorizado = ativos.find(acc => acc.id === token);
+            const autorizado = ativos.find(acc => acc.id === idUser);
 
             if (autorizado) {
                 liberar();
